--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT= ":3002"
 ENVIROMENT = "testnet"
-DB_LOCAL = "root:@tcp(db:3306)/user?parseTime=true"
+DB_LOCAL = "root:7023@tcp(127.0.0.1:3306)/user?parseTime=true"
